# innova-agent

./: README.md  pyproject.toml
innova/: ECOSYSTEM.md  __init__.py
innova/brain/: neural.py
innova/core/: agent.py  unique.py  unique_advanced.py
innova/gui/: desktop.py  index.html  server.py
innova/security/: auditor.py
innova/stealth/: ghost.py
innova/tools/: registry.py
innova/voice/: speaker.py
scripts/: install.sh
